--- a/app/listings/templates/listings/hello.html
+++ b/app/listings/templates/listings/hello.html
@@ -1,3 +1,7 @@
+{% extends 'listings/base.html' %}
+
+{% block content %}
+
 <h1>Hello Django !</h1>
 <p>Mes groupes préférés sont :</p>
 <ul>
@@ -12,3 +16,5 @@
 {% else %}
   <p>J'ai quelques groupes préférés.</p>
 {% endif %}
+
+{% endblock %}
